--- a/source/index.html
+++ b/source/index.html
@@ -11,65 +11,88 @@
 
   <body>
     <header class="page-header">
-      <!-- включить <header> из файла header.html -->
+      <div class="page-header__wrapper wrapper">
+        <a class="page-header__link" href="#">
+          <!-- TODO адаптировать размеры изображения ЛОГО -->
+          <img class="page-header__logo" src="img/logo-mobile.svg" alt="КЭТ ЭНЕРДЖИ" width="184" height="38">
+        </a>
+        <nav class="page-header__nav header-nav">
+          <button class="header-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          <ul class="header-nav__list">
+            <li class="header-nav__item header-nav__item--active">
+              <a href="#">главная</a>
+            </li>
+            <li class="header-nav__item">
+              <a href="catalog.html">каталог продукции</a>
+            </li>
+            <li class="header-nav__item">
+              <a href="form.html">подбор программы</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <section class="page-header__health-program health-program">
+        <div class="health-program__wrapper wrapper">
+          <div class="health-program__text-wrapper">
+            <h2 class="visually-hidden">Подобрать программу здоровья</h2>
+            <h2 class="health-program__title">Функциональное питание для котов
+            </h2>
+            <p class="health-program__slogan">Занялся собой? Займись котом!</p>
+            <a class="health-program__link button button--green" href="form.html">Подобрать программу</a>
+          </div>
+          <img class="health-program__img" src="../img/index-can-mobile@1x.png" alt="Кэт-энерджи с курицей для вашего кота" width="280" height="271">
+        </div>
+      </section>
     </header>
 
     <main class="page-main">
       <h1 class="visually-hidden">Интернет-магазин функционального питания для ваших любимых котиков</h1>
-      <section class="health-program">
-        <h2 class="visually-hidden">Подобрать программу здоровья</h2>
-        <header class="health-program__header wrapper">
-
-          <h2 class="health-program__title">Функциональное питание для котов
-          </h2>
-          <p class="health-program__slogan">Занялся собой? Займись котом!</p>
-
-          <img class="health-program__img" src="../img/index-can-mobile@1x.png" alt="Кэт-энерджи с курицей для вашего кота" width="280" height="271">
-          <a class="health-program__link button button--green" href="form.html">Подобрать программу</a>
-        </header>
-        <ul class="health-program__list wrapper">
-          <li class="health-program__item health-program-item">
-            <h3 class="health-program-item__title program-item__icon program-item__icon--slim">Похудение</h3>
-            <p class="health-program-item__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить
-              лишний вес.</p>
-            <a class="health-program-item__link" href="catalog.html">Каталог Slim</a>
-          </li>
-          <li class="health-program__item health-program-item">
-            <h3 class="health-program-item__title program-item__icon program-item__icon--pro">Набор массы</h3>
-            <p class="health-program-item__description health-program-item__description--narrow">
-              Заработать авторитет среди дворовых&nbsp;котов и&nbsp;даже собак?
-              Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
-            </p>
-            <a class="health-program-item__link" href="catalog.html">Каталог pro</a>
-          </li>
-        </ul>
+      <section class="program-set">
+        <h2 class="visually-hidden">Список программ оздоровления для вашего любимца</h2>
+        <div class="program-set__wrapper wrapper">
+          <ul class="program-set__list program-list">
+            <li class="program-list__item program-item">
+              <h3 class="program-item__title program-item__icon program-item__icon--slim">Похудение</h3>
+              <p class="program-item__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить
+                лишний вес.</p>
+              <a class="program-item__link" href="catalog.html">Каталог Slim</a>
+            </li>
+            <li class="program-list__item program-item">
+              <h3 class="program-item__title program-item__icon program-item__icon--pro">Набор массы</h3>
+              <p class="program-item__description program-item__description--narrow">
+                Заработать авторитет среди дворовых&nbsp;котов и&nbsp;даже собак?
+                Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+              </p>
+              <a class="program-item__link" href="catalog.html">Каталог pro</a>
+            </li>
+          </ul>
+        </div>
       </section>
-
       <section class="advantages">
-        <div class="wrapper">
+        <div class="advantages__wrapper wrapper">
           <h2 class="advantages__title">Как это работает</h2>
           <ol class="advantages__list">
-            <li class="advantages__item advantages__icon advantages__icon--leaf">
+            <li class="advantages__item advantages__item--leaf">
               <!-- TODO добавить aria для чтения? -->
-              <span class="advantages__num advantages__num--1">1</span>
+              <span class="advantages__num">1</span>
               <p class="advantages__text">
                 Функциональное питание содержит только полезные питательные вещества.
               </p>
             </li>
-            <li class="advantages__item advantages__icon advantages__icon--powder">
-              <span class="advantages__num advantages__num--2">2</span>
+            <li class="advantages__item advantages__item--powder">
+              <span class="advantages__num">2</span>
               <p class="advantages__text">
                 Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
               </p>
             </li>
-            <li class="advantages__item advantages__icon advantages__icon--dining">
-              <span class="advantages__num advantages__num--3">3</span>
+            <li class="advantages__item advantages__item--dining">
+              <span class="advantages__num">3</span>
               <p class="advantages__text">
                 Замените один-два приема обычной еды на наше функциональное питание.
               </p>
             </li>
-            <li class="advantages__item advantages__icon advantages__icon--clock">
-              <span class="advantages__num advantages__num--4">4</span>
+            <li class="advantages__item advantages__item--clock">
+              <span class="advantages__num">4</span>
               <p class="advantages__text">
                 Уже через месяц наслаждайтесь изменениями к лучшему вашего&nbsp;питомца!
               </p>
@@ -78,7 +101,7 @@
         </div>
       </section>
       <section class="example">
-        <div class="wrapper">
+        <div class="example__wrapper wrapper">
           <div class="example__text-wrapper">
             <h2 class="example__title">Живой пример</h2>
             <p class="example__description">
@@ -89,7 +112,7 @@
             <div class="example__keypoints keypoints">
               <div class="keypoints__item item-bordered">
                 <span class="item-bordered__value">5 кг</span>
-                <span class="item-bordered__option item-bordered__option--weight">снижение веса</span>
+                <span class="item-bordered__option">снижение веса</span>
               </div>
               <div class="keypoints__item item-bordered">
                 <span class="item-bordered__value">60 дней</span>
@@ -109,7 +132,7 @@
             </div>
             <div class="slider__toggles">
               <button class="slider__toggle slider__toggle--before" type="button">Было</button>
-              <div class="slider__indicator" type="button"></div>
+              <div class="slider__indicator"></div>
               <button class="slider__toggle slider__toggle--after" type="button">Стало</button>
             </div>
           </div>
@@ -118,18 +141,18 @@
     </main>
 
     <footer class="page-footer">
-      <section class="page-footer__contacts contacts">
+      <section class="page-footer__contacts contacts contacts--inner--page">
         <h2 class="visually-hidden">Как нас найти</h2>
-        <div class="contacts__wrapper wrapper">
+        <div class="contacts__text-wrapper wrapper">
           <h3 class="contacts__title">Приглашаем к&nbsp;сотрудничеству дилеров!</h3>
           <p class="contacts__address">
-            <span>ул. Большая Конюшенная, д. 19/8</span>
+            <span>ул. Большая<br> Конюшенная, д. 19/8</span>
             <span>Санкт-Петербург</span>
           </p>
         </div>
         <div class="contacts__map">
-          <div class="contacts__map-img"></div>
           <h2 class="visually-hidden">Как до нас добраться - карта</h2>
+          <div class="contacts__map-img"></div>
           <!-- <iframe class="contacts__mapframe"
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253056438!2d30.320853351292428!3d59.93871916896568!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1573567411114!5m2!1sru!2sru"
                   width="320" height="400" style="border: 0;" allowfullscreen=""></iframe> -->
@@ -137,80 +160,40 @@
                   height="400" style="border: 0;"></iframe> -->
         </div>
       </section>
-      <!--  На главной должен быть линк на верх страницы?
-          На других страницах ссылка на главную? -->
-      <section class="page-footer__links">
-        <div class="wrapper">
-          <div class="footer-links">
-            <h2 class="visually-hidden">Как с нами связаться</h2>
-            <a class="footer-links__item footer-logo" href="#">
-              <img class="footer-logo__image" src="../img/logo-footer.svg" alt="Интернет-магазин фитнес еды для котиков" width="128" height="24">
+      <section class="page-footer__links footer-links">
+        <div class="footer-links__wrapper wrapper">
+          <h2 class="visually-hidden">Как с нами связаться</h2>
+          <a class="footer-links__item footer-logo" href="#">
+            <img class="footer-links__logo footer-logo__image" src="../img/logo-footer.svg" alt="Интернет-магазин фитнес еды для котиков" width="128" height="24">
+          </a>
+          <ul class="footer-links__item social">
+            <li class="social__item">
+              <a class="social__link social__link--vk" href="https://vk.com/htmlacademy" target="_blank">
+                <span class="visually-hidden">VK</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--insta" href="https://instagram.com/htmlacademy" target="_blank">
+                <span class="visually-hidden">Instagram</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--fb" href="https://facebook.com/htmlacademy" target="_blank">
+                <span class="visually-hidden">Facebook</span>
+              </a>
+            </li>
+          </ul>
+          <address class="footer-links__item copyright">
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Посетите сайт разработчика">
+              <span class="copyright__title">HTML Academy</span>
             </a>
-
-            <ul class="footer-links__item social">
-              <li class="social__item">
-                <a class="social__link social__link--vk" href="https://vk.com/htmlacademy" target="_blank">
-                  <span class="visually-hidden">VK</span>
-                </a>
-              </li>
-              <li class="social__item">
-                <a class="social__link social__link--insta" href="https://instagram.com/htmlacademy" target="_blank">
-                  <span class="visually-hidden">Instagram</span>
-                </a>
-              </li>
-              <li class="social__item">
-                <a class="social__link social__link--fb" href="https://facebook.com/htmlacademy" target="_blank">
-                  <span class="visually-hidden">Facebook</span>
-                </a>
-              </li>
-
-              <!-- <li class="social__item">
-                <a class="social__link social__link--fb" href="https://facebook.com/htmlacademy" target="_blank">
-                  <span class="visually-hidden">Facebook</span>
-                </a>
-              </li>
-              <li class="social__item">
-                <a class="social__link social__link--fb" href="https://facebook.com/htmlacademy" target="_blank">
-                  <span class="visually-hidden">Facebook</span>
-                </a>
-              </li>
-              <li class="social__item">
-                <a class="social__link social__link--fb" href="https://facebook.com/htmlacademy" target="_blank">
-                  <span class="visually-hidden">Facebook</span>
-                </a>
-              </li>
-              <li class="social__item">
-                <a class="social__link social__link--fb" href="https://facebook.com/htmlacademy" target="_blank">
-                  <span class="visually-hidden">Facebook</span>
-                </a>
-              </li> -->
-
-            </ul>
-
-            <address class="footer-links__item copyright">
-
-              <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Посетите сайт разработчика">
-                <span class="copyright__title">HTML Academy</span>
-              </a>
-
-              <a class="copyright__link copyright__link--logo" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Посетите сайт веб-разработчика">
-                <!-- <img src="../img/htmlacademy.svg" alt="Лого HTML академии" width="27" height="34"> -->
-              </a>
-
-            </address>
-          </div>
+            <a class="copyright__link copyright__link--logo" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Посетите сайт веб-разработчика">
+              <!-- <img src="../img/htmlacademy.svg" alt="Лого HTML академии" width="27" height="34"> -->
+            </a>
+          </address>
         </div>
       </section>
     </footer>
-
-    <!--TODO Проверить скрин-ридером -->
-    <!-- TODO вставляем inline SVG -->
-    <!-- <svg class="user-list__login-icon" width="16" height="16"... ></svg> -->
-    <!-- TODO в SCSS
-           polygon {
-          fill: #ffffff;
-        } -->
-
   </body>
 
 </html>
