--- a/source/catalog.html
+++ b/source/catalog.html
@@ -73,8 +73,8 @@
               <picture>
                 <source media="(min-width: 1300px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
-                <img class="basic-item__img basic-item__img--big" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Фото упаковки Cat Energy PRO 1000 г" width="140"
-                     height="144">
+
+                <img class="basic-item__img basic-item__img--big" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Фото упаковки Cat Energy PRO 1000 г" width="140" height="144">
               </picture>
               <div class="basic-item__text-wrapper">
                 <p class="basic-item__title">Cat Energy PRO 1000 г</p>
@@ -124,8 +124,7 @@
               <picture>
                 <source media="(min-width: 1300px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
-                <img class="basic-item__img basic-item__img--big" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Фото упаковки Cat Energy PRO 1000 г" width="140"
-                     height="144">
+                <img class="basic-item__img basic-item__img--big" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Фото упаковки Cat Energy PRO 1000 г" width="140" height="144">
               </picture>
               <div class="basic-item__text-wrapper">
                 <p class="basic-item__title">Cat Energy PRO 1000 г</p>
@@ -175,8 +174,7 @@
               <picture>
                 <source media="(min-width: 1300px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
-                <img class="basic-item__img basic-item__img--big" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Фото упаковки Cat Energy Slim 1000 г"
-                     width="140" height="144">
+                <img class="basic-item__img basic-item__img--big" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Фото упаковки Cat Energy Slim 1000 г" width="140" height="144">
               </picture>
               <div class="basic-item__text-wrapper">
                 <p class="basic-item__title">Cat Energy Slim 1000 г</p>
@@ -334,7 +332,6 @@
                     .st0 {
                       fill: #666666;
                     }
-
                   </style>
                   <path fill="#666666" class="st0"
                         d="M11.8,1C13.6,1,15,2.4,15,4.2v7.7c0,1.7-1.4,3.1-3.1,3.1H4.2C2.4,15,1,13.6,1,11.8V4.2C1,2.4,2.4,1,4.2,1H11.8M11.8,0H4.2C1.9,0,0,1.9,0,4.2v7.7C0,14.1,1.9,16,4.2,16h7.7c2.3,0,4.2-1.9,4.2-4.2V4.2C16,1.9,14.1,0,11.8,0z" />
