--- a/source/form.html
+++ b/source/form.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Кэт энерджи - форма заказа</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/picturefill.min.js" async></script>
   </head>
 
   <body class="inner-page">
@@ -231,7 +232,6 @@
                     .st0 {
                       fill: #666666;
                     }
-
                   </style>
                   <path fill="#666666" class="st0"
                         d="M11.8,1C13.6,1,15,2.4,15,4.2v7.7c0,1.7-1.4,3.1-3.1,3.1H4.2C2.4,15,1,13.6,1,11.8V4.2C1,2.4,2.4,1,4.2,1H11.8M11.8,0H4.2C1.9,0,0,1.9,0,4.2v7.7C0,14.1,1.9,16,4.2,16h7.7c2.3,0,4.2-1.9,4.2-4.2V4.2C16,1.9,14.1,0,11.8,0z" />
